# TerminalTeams

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
chat/: CMakeLists.txt  Main.cpp  README.md  TTChat.cpp  TTChat.hpp  TTChatBuilder.cpp  TTChatBuilder.hpp  TTChatSettings.cpp  TTChatSettings.hpp  TTServer.cpp  TTServer.hpp
chat/autotests/: CMakeLists.txt  TTChatHandlerTest.cpp  autotests-happy-path.sh  tteams-chat-autotests-happy-path-additional-whitespaces.sh  tteams-chat-autotests-happy-path-duplicated-whitespaces.sh  tteams-chat-autotests-happy-path-long-words.sh  tteams-chat-autotests-happy-path.sh  tteams-chat-autotests-unhappy-path.sh  tteams-chat-autotests-verdict.sh  tteams-chat-autotests.sh
chat/doc/: TTChat.uml  TTChatCommunication.uml  TTChatHandler.uml
chat/mocks/: TTChatHandlerMock.hpp  TTChatMock.hpp  TTChatSettingsMock.hpp
chat/src/: CMakeLists.txt  Main.cpp  TTChat.cpp  TTChat.hpp  TTChatCallback.hpp  TTChatEntry.hpp  TTChatHandler.cpp  TTChatHandler.hpp  TTChatMessage.hpp  TTChatMessageType.hpp  TTChatSettings.cpp  TTChatSettings.hpp  TTChatTimestamp.hpp  TTConfig.hpp.in  tteams-chat.sh
chat/unittests/: CMakeLists.txt  Main.cpp  TTChatHandlerTest.cpp  TTChatSettingsTest.cpp  TTChatTest.cpp  tteams-chat-unittests.sh
contacts/autotests/: CMakeLists.txt  TTContactsHandlerTest.cpp  autotests-happy-path.sh  autotests.sh  tteams-contacts-autotests-happy-path-active-inactive.sh  tteams-contacts-autotests-happy-path-select.sh  tteams-contacts-autotests-happy-path-selection.sh  tteams-contacts-autotests-happy-path-send-receive.sh  tteams-contacts-autotests-happy-path.sh  tteams-contacts-autotests-unhappy-path-non-existing.sh  tteams-contacts-autotests-unhappy-path-send-receive.sh  tteams-contacts-autotests-verdict.sh  tteams-contacts-autotests.sh
contacts/src/: CMakeLists.txt  Main.cpp  TTContacts.cpp  TTContacts.hpp  TTContactsConsumer.cpp  TTContactsConsumer.hpp  TTContactsEntry.hpp  TTContactsHandler.cpp  TTContactsHandler.hpp  TTContactsHandlerEntry.hpp  TTContactsMessage.hpp  TTContactsSettings.cpp  TTContactsSettings.hpp  TTContactsState.hpp  TTContactsStatus.hpp  tteams-contacts.sh
contacts/unittests/: CMakeLists.txt  Main.cpp  TTContactsConsumerMock.hpp  TTContactsHandlerTest.cpp  TTContactsOutputStreamMock.hpp  TTContactsSettingsMock.hpp  TTContactsSettingsTest.cpp  TTContactsTest.cpp  tteams-contacts-unittests.sh
controller-textbox/src/: CMakeLists.txt  Main.cpp  TTTextBox.cpp  TTTextBox.hpp  TTTextBoxHandler.cpp  TTTextBoxHandler.hpp  TTTextBoxMessage.hpp  TTTextBoxSettings.cpp  TTTextBoxSettings.hpp
diagnostics/: CMakeLists.txt
diagnostics/src/: CMakeLists.txt  TTDiagnosticsHelper.hpp  TTDiagnosticsLogger.hpp  TTDiagnosticsTracer.hpp
engine/autotests/: CMakeLists.txt  TTEngineTest.cpp  tteams-engine-autotests-dummy-neighbor.py  tteams-engine-autotests-generate-proto.sh  tteams-engine-autotests-happy-path.sh  tteams-engine-autotests-venv-activate.sh  tteams-engine-autotests-venv-deactivate.sh  tteams-engine-autotests.sh  tteams-interface-delete.sh  tteams-network.sh
engine/src/: CMakeLists.txt  Main.cpp  TTAbstractFactory.hpp  TTBroadcasterChat.cpp  TTBroadcasterChat.hpp  TTBroadcasterChatIf.hpp  TTBroadcasterDiscovery.cpp  TTBroadcasterDiscovery.hpp  TTBroadcasterDiscoveryIf.hpp  TTBroadcasterServiceChat.cpp  TTBroadcasterServiceChat.hpp  TTBroadcasterServiceDiscovery.cpp  TTBroadcasterServiceDiscovery.hpp  TTBroadcasterStub.cpp  TTBroadcasterStub.hpp  TTClient.cpp  TTEngine.cpp  TTEngine.hpp  TTEngineSettings.cpp  TTEngineSettings.hpp  TTInterface.hpp  TTNeighbors.cpp  TTNeighbors.hpp  TTNeighborsChat.cpp  TTNeighborsChat.hpp  TTNeighborsChatService.cpp  TTNeighborsChatService.hpp  TTNeighborsDiscovery.cpp  TTNeighborsDiscovery.hpp  TTNeighborsDiscoveryService.cpp  TTNeighborsDiscoveryService.hpp  TTNeighborsMessage.hpp  TTNeighborsService.cpp  TTNeighborsService.hpp  TTNeighborsServiceChat.cpp  TTNeighborsServiceChat.hpp  TTNeighborsServiceDiscovery.cpp  TTNeighborsServiceDiscovery.hpp  TTNeighborsStub.cpp  TTNeighborsStub.hpp  (+6 more)
engine/unittests/: CMakeLists.txt  Main.cpp  TTBroadcasterChatTest.cpp  TTBroadcasterDiscoveryTest.cpp  TTEngineSettingsTest.cpp  TTEngineTest.cpp  TTNeighborsServiceChatTest.cpp  TTNeighborsServiceDiscoveryTest.cpp  TTNeighborsStubTest.cpp  TTNetworkInterfaceTest.cpp  tteams-engine-unittests.sh
src/: Main.cpp  (+1 more)
textbox/autotests/: CMakeLists.txt  TTTextBoxHandlerTest.cpp  autotests-happy-path.sh  tteams-textbox-autotests-happy-path-help.sh  tteams-textbox-autotests-happy-path-message.sh  tteams-textbox-autotests-happy-path-quit.sh  tteams-textbox-autotests-happy-path-select.sh  tteams-textbox-autotests-happy-path-switch.sh  tteams-textbox-autotests-happy-path.sh  tteams-textbox-autotests-unhappy-path-help.sh  tteams-textbox-autotests-unhappy-path-kill.sh  tteams-textbox-autotests-unhappy-path-quit.sh  tteams-textbox-autotests-unhappy-path-select.sh  tteams-textbox-autotests-unhappy-path-switch.sh  tteams-textbox-autotests-unhappy-path.sh  tteams-textbox-autotests-verdict.sh  tteams-textbox-autotests.sh
textbox/src/: CMakeLists.txt  Main.cpp  TTTextBox.cpp  TTTextBox.hpp  TTTextBoxHandler.cpp  TTTextBoxHandler.hpp  TTTextBoxMessage.hpp  TTTextBoxSettings.cpp  TTTextBoxSettings.hpp  TTTextBoxStatus.hpp  tteams-textbox.sh
textbox/unittests/: CMakeLists.txt  Main.cpp  TTTextBoxHandlerTest.cpp  TTTextBoxSettingsTest.cpp  TTTextBoxTest.cpp  tteams-textbox-unittests.sh
utils/src/: CMakeLists.txt  TTTimestamp.hpp  TTUtilsAscii.hpp  TTUtilsInputStream.hpp  TTUtilsMessageQueue.cpp  TTUtilsMessageQueue.hpp  TTUtilsMessageQueueMock.hpp  TTUtilsNamedPipe.cpp  TTUtilsNamedPipe.hpp  TTUtilsNamedPipeMock.hpp  TTUtilsOutputStream.hpp  TTUtilsOutputStreamMock.hpp  TTUtilsSharedMem.cpp  TTUtilsSharedMem.hpp  TTUtilsSharedMemMock.hpp  TTUtilsSignals.hpp  TTUtilsStopable.hpp  TTUtilsStopper.hpp  TTUtilsSyscall.hpp  TTUtilsTimer.hpp  TTUtilsTimerFactory.hpp
utils/unittests/: CMakeLists.txt  Main.cpp  tteams-utils-unittests.sh
view-contacts/: CMakeLists.txt
view-contacts/autotests/: CMakeLists.txt  (+2 more)
(+112 files in other folders)
