cmake_minimum_required(VERSION 3.22)
project(TerminalTeamsHandler VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)

find_package(Threads REQUIRED)

set(TT_CONTACTS tteams-contacts)
set(TT_CONTACTS_HANDLER tteams-contacts-handler)
set(TT_CONTACTS_EXE tteams-contacts-exe)
set(TT_CONTACTS_HANDLER_TEST tteams-contacts-handler-test)

get_filename_component(TT_CONTACTS_HANDLER_TEST_DIRECTORY "." ABSOLUTE)
get_filename_component(TT_CONTACTS_DIRECTORY "../src" ABSOLUTE)

set(TT_CONTACTS_HANDLER_TEST_SCRIPTS
  "autotests-happy-path.sh")

add_subdirectory(${TT_CONTACTS_DIRECTORY} ${TT_CONTACTS} EXCLUDE_FROM_ALL)

add_executable(${TT_CONTACTS_HANDLER_TEST}
  "${TT_CONTACTS_HANDLER_TEST_DIRECTORY}/TTContactsHandlerTest.cpp")
  set_target_properties(${TT_CONTACTS_HANDLER_TEST} PROPERTIES OUTPUT_NAME ${TT_CONTACTS_HANDLER})
target_include_directories(${TT_CONTACTS_HANDLER_TEST} PUBLIC "${PROJECT_BINARY_DIR}")
target_include_directories(${TT_CONTACTS_HANDLER_TEST} PUBLIC "${TT_CONTACTS_DIRECTORY}")
target_link_libraries(${TT_CONTACTS_HANDLER_TEST}
  Threads::Threads
  ${TT_CONTACTS_HANDLER})
add_dependencies(${TT_CONTACTS_HANDLER_TEST} ${TT_CONTACTS_EXE})

install(TARGETS ${TT_CONTACTS_HANDLER_TEST} ${TT_CONTACTS_EXE} DESTINATION .)
install(FILES ${TT_CONTACTS_HANDLER_TEST_SCRIPTS} DESTINATION .
  PERMISSIONS
    OWNER_EXECUTE OWNER_WRITE OWNER_READ
    GROUP_EXECUTE GROUP_READ
    WORLD_EXECUTE WORLD_READ)