cmake_minimum_required(VERSION 3.22)
project(TerminalTeamsContacts VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)

find_package(Threads REQUIRED)

get_filename_component(TT_ROOT_DIRECTORY "../../" ABSOLUTE)
get_filename_component(TT_DIAGNOSTICS_DIRECTORY "${TT_ROOT_DIRECTORY}/diagnostics" ABSOLUTE)
get_filename_component(TT_CONTACTS_SRC_DIRECTORY "." ABSOLUTE)
set(TT_DIAGNOSTICS_LIB "tteams-diagnostics")

if (NOT TARGET ${TT_DIAGNOSTICS_LIB})
  add_subdirectory("${TT_DIAGNOSTICS_DIRECTORY}" "${TT_DIAGNOSTICS_LIB}")
endif()

set(TT_CONTACTS_SCRIPTS
  "${TT_CONTACTS_SRC_DIRECTORY}/tteams-contacts.sh"
)
foreach(TT_CONTACTS_SCRIPT ${TT_CONTACTS_SCRIPTS})
  configure_file("${TT_CONTACTS_SCRIPT}" "${PROJECT_BINARY_DIR}" COPYONLY)
endforeach()

set(TT_CONTACTS_LIB tteams-contacts)
add_library(${TT_CONTACTS_LIB}
  "${TT_CONTACTS_SRC_DIRECTORY}/TTContactsSettings.cpp"
  "${TT_CONTACTS_SRC_DIRECTORY}/TTContactsConsumer.cpp"
  "${TT_CONTACTS_SRC_DIRECTORY}/TTContacts.cpp"
)
set_target_properties(${TT_CONTACTS_LIB} PROPERTIES VERSION ${PROJECT_VERSION})
target_include_directories(${TT_CONTACTS_LIB} PUBLIC "${PROJECT_BINARY_DIR}")
target_include_directories(${TT_CONTACTS_LIB} PUBLIC "${TT_CONTACTS_SRC_DIRECTORY}")
target_include_directories (${TT_CONTACTS_LIB} PUBLIC $<TARGET_PROPERTY:${TT_DIAGNOSTICS_LIB},INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(${TT_CONTACTS_LIB} ${TT_DIAGNOSTICS_LIB})

set(TT_CONTACTS tteams-contacts-exe)
add_executable(${TT_CONTACTS}
  "${TT_CONTACTS_SRC_DIRECTORY}/Main.cpp"
)
set_target_properties(${TT_CONTACTS} PROPERTIES OUTPUT_NAME ${TT_CONTACTS_LIB})
target_include_directories(${TT_CONTACTS} PUBLIC "${PROJECT_BINARY_DIR}")
target_include_directories(${TT_CONTACTS} PUBLIC "${TT_CONTACTS_SRC_DIRECTORY}")
target_include_directories (${TT_CONTACTS} PUBLIC $<TARGET_PROPERTY:${TT_DIAGNOSTICS_LIB},INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(${TT_CONTACTS} ${TT_CONTACTS_LIB})

set(TT_CONTACTS_HANDLER_LIB tteams-contacts-handler)
add_library(${TT_CONTACTS_HANDLER_LIB}
  "${TT_CONTACTS_SRC_DIRECTORY}/TTContactsHandler.cpp"
)
target_include_directories(${TT_CONTACTS_HANDLER_LIB} PUBLIC "${PROJECT_BINARY_DIR}")
target_include_directories(${TT_CONTACTS_HANDLER_LIB} PUBLIC "${TT_CONTACTS_SRC_DIRECTORY}")
target_include_directories (${TT_CONTACTS_HANDLER_LIB} PUBLIC $<TARGET_PROPERTY:${TT_DIAGNOSTICS_LIB},INTERFACE_INCLUDE_DIRECTORIES>)

install(TARGETS ${TT_CONTACTS} DESTINATION "bin")
install(TARGETS ${TT_CONTACTS_LIB} DESTINATION "lib")
install(TARGETS ${TT_CONTACTS_HANDLER_LIB} DESTINATION "lib")
install(FILES ${TT_CONTACTS_SCRIPTS} DESTINATION "bin"
  PERMISSIONS
    OWNER_EXECUTE OWNER_WRITE OWNER_READ
    GROUP_EXECUTE GROUP_READ
    WORLD_EXECUTE WORLD_READ)
